# cubek

./: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: attention_backward.rs  gemm_cpu_tiled.rs  tile_quant_stage.rs
benchmarks/src/: lib.rs  registry.rs
benchmarks/src/attention/: correctness.rs  mod.rs
benchmarks/src/conv2d/: correctness.rs  mod.rs
benchmarks/src/fft/: correctness.rs  mod.rs
benchmarks/src/gemm/: correctness.rs  mod.rs  problem.rs
benchmarks/src/gemv/: correctness.rs  mod.rs
benchmarks/src/reduce/: correctness.rs  mod.rs
crates/cubek/: Cargo.toml
crates/cubek-attention/src/: lib.rs
crates/cubek-attention/src/backward/: mod.rs
crates/cubek-attention/src/eval/: mod.rs  problem.rs
crates/cubek-attention/src/forward/: mod.rs
crates/cubek-convolution/src/: cpu_reference.rs
crates/cubek-fft/src/: cpu_reference.rs
crates/cubek-fft/src/fft/: cfft.rs  fft_inner.rs  fft_parallel.rs  irfft.rs  rfft.rs  rfft_large.rs
crates/cubek-fft/tests/suite/: irfft.rs  rfft.rs
crates/cubek-interpolate/: Cargo.toml
crates/cubek-interpolate/src/: lib.rs
crates/cubek-interpolate/src/definition/: base.rs  error.rs  mod.rs  precision.rs  problem.rs  tile_size.rs
crates/cubek-interpolate/src/launch/: base.rs  mod.rs  strategy.rs  tune_key.rs
crates/cubek-interpolate/src/routines/: base.rs  blueprint.rs  global_memory.rs  mod.rs  shared_memory.rs
crates/cubek-interpolate/tests/interpolate/: bench_catalog.rs
crates/cubek-layout/: Cargo.toml
crates/cubek-layout/src/: lib.rs
crates/cubek-layout/src/request/: base.rs  concrete.rs  facet.rs  mod.rs  tests.rs
crates/cubek-matmul/src/: args.rs
crates/cubek-matmul/src/components/: tile.rs
crates/cubek-matmul/src/definition/: error.rs  inner_layout.rs
crates/cubek-matmul/src/launch/: args.rs  strategy.rs
crates/cubek-matmul/src/routines/: mod.rs  tma_tile.rs
crates/cubek-matmul/src/strategy/: strategy.rs  tune_key.rs
crates/cubek-matmul/tests/matmul/: bench_catalog.rs  launcher_strategy.rs
crates/cubek-matmul/tests/suite/: bias.rs
crates/cubek-quant/src/: dequantize.rs  dequantize_tiled.rs  quantize.rs
crates/cubek-quant/src/layout/: scales.rs
crates/cubek-quant/tests/quant/: tiled.rs
crates/cubek-random/src/: base.rs  bernoulli.rs  normal.rs  uniform.rs
crates/cubek-reduce/: Cargo.toml
crates/cubek-reduce/src/components/: args.rs
crates/cubek-reduce/src/launch/: base.rs  layout_request.rs  mod.rs  strategy.rs
crates/cubek-reduce/src/routines/: base.rs  cube.rs  plane.rs  shared_sum.rs  unit.rs
crates/cubek-reduce/tests/it/: test_case.rs
crates/cubek-resample/tests/resample/: base.rs  mod.rs
crates/cubek-std/src/: lib.rs
crates/cubek-std/src/launch/: mod.rs  tma.rs
crates/cubek-std/tests/std/: layout.rs
crates/cubek-test-utils/: Cargo.toml
crates/cubek-test-utils/src/: lib.rs  progress.rs  tile_input.rs
crates/cubek-test-utils/src/stubs/: mod.rs  quant.rs  random.rs
crates/cubek-test-utils/src/test_tensor/: base.rs  custom.rs  quant.rs  random.rs
crates/cubek-tile/: Cargo.toml
crates/cubek-tile/src/: fold.rs  lib.rs  load.rs  mma_config.rs  payload.rs  stage.rs  tile.rs  tile_kind.rs  vec_tensor.rs
crates/cubek-tile/src/layout/: axis.rs  mod.rs
crates/cubek-tile/src/load/: arg.rs  delivery.rs  mod.rs  source.rs
crates/cubek/src/: lib.rs
xtask/src/commands/: test.rs
(+299 files in other folders)
