[package]
authors = ["louisfd <louisfd94@gmail.com>"]
description = "CubeK: Layout-request vocabulary"
edition.workspace = true
license.workspace = true
name = "cubek-layout"
readme.workspace = true
rust-version.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-layout"
version.workspace = true

[dependencies]
cubecl = { workspace = true }
