[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: CubeCL Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek"
version.workspace = true

[features]
default = [
    "std",
    "stdlib",
    "cubek-std?/default",
    "cubek-tile?/default",
    "cubek-quant?/default",
    "cubek-random?/default",
    "cubek-reduce?/default",
    "cubek-matmul?/default",
    "cubek-convolution?/default",
    "cubek-attention?/default",
    "cubek-interpolate?/default",
    "cubek-pool?/default",
    "cubek-fft?/default",
    "cubek-resample?/default",
]

std = [
    "cubek-std?/std",
    "cubek-tile?/std",
    "cubek-quant?/std",
    "cubek-random?/std",
    "cubek-reduce?/std",
    "cubek-matmul?/std",
    "cubek-convolution?/std",
    "cubek-attention?/std",
    "cubek-interpolate?/std",
    "cubek-pool?/std",
    "cubek-fft?/std",
    "cubek-resample?/std",
]

attention = ["cubek-attention"]
interpolate = ["cubek-interpolate"]
pool = ["cubek-pool"]
convolution = ["cubek-convolution"]
matmul = ["cubek-matmul"]
quantization = ["cubek-quant/kernels"]
random = ["cubek-random"]
reduce = ["cubek-reduce"]
stdlib = ["cubek-std"]
tile = ["cubek-tile"]
fft = ["cubek-fft"]
resample = ["cubek-resample"]


[dependencies]
cubecl = { workspace = true }
cubek-attention = { path = "../cubek-attention", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-interpolate = { path = "../cubek-interpolate", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-pool = { path = "../cubek-pool", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-convolution = { path = "../cubek-convolution", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-matmul = { path = "../cubek-matmul", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-quant = { path = "../cubek-quant", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-random = { path = "../cubek-random", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-reduce = { path = "../cubek-reduce", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-fft = { path = "../cubek-fft", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-std = { path = "../cubek-std", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-tile = { path = "../cubek-tile", version = "=0.3.0-pre.1", default-features = false, optional = true }
cubek-resample = { path = "../cubek-resample", version = "=0.3.0-pre.1", default-features = false, optional = true }
